<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E1D5D5"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="410dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:text="@string/appname"
        android:textColor="#2D0870"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="271dp"
        android:layout_height="68dp"
        android:layout_marginTop="116dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/btnlvl0"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="#BC5353"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="271dp"
        android:layout_height="68dp"
        android:layout_marginTop="64dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/btnlvl1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="#BC5353"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button3"
        android:layout_width="271dp"
        android:layout_height="68dp"
        android:layout_marginBottom="100dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/btnlvl2"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="#BC5353"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

</androidx.constraintlayout.widget.ConstraintLayout>