<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E1D5D5"
    tools:context=".ResultActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="332dp"
        android:layout_height="190dp"
        android:layout_marginTop="44dp"
        android:background="#C88787"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/quiz" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="175dp"
        android:layout_height="48dp"
        android:layout_marginBottom="36dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/appname"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="176dp"
        android:layout_height="64dp"
        android:layout_marginBottom="32dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/fscore"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="202dp"
        android:layout_height="79dp"
        android:layout_marginBottom="208dp"
        android:text="@string/btnrestart"
        android:textSize="20sp"
        app:backgroundTint="#BC5353"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>